trunk/tests/kiama/negative/type_errors/L4/7_badarray10.ob
MODULE badarray10;

VAR
    array2 : ARRAY 26 OF BOOLEAN;
    
BEGIN
    array2[1 < 2] := TRUE
END badarray10.
